--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Joe T</title>
   </head>
   <body>
-      hey there
+      <h1>
+          Hello, Code School!
+      </h1>
+      <ul>
+        <li>Code</li>
+        <li>Stuff</li>
+      </ul>
   </body>
 </html>
