--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Joe T</title>
   </head>
   <body>
-      <h1>'Hello, Code School!'</h1>
+      <h1>Hello, Code School!</h1>
       <ul>
         <li>Code</li>
         <li>Stuff</li>
